codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__shell_render_uses_the_selected_app_theme.snap
---
source: tui/src/app_shell_tests.rs
expression: rendered_styles
---
[
    (
        GruvboxDark,
        [
            "Style::new().fg(Color::Rgb(102, 92, 84)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(131, 165, 152)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(131, 165, 152)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(131, 165, 152)).bg(Color::Rgb(40, 40, 40)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(131, 165, 152)).bg(Color::Rgb(60, 56, 54)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(142, 192, 124)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(142, 192, 124)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(142, 192, 124)).bg(Color::Rgb(40, 40, 40)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(142, 192, 124)).bg(Color::Rgb(60, 56, 54)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(168, 153, 132)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(168, 153, 132)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(168, 153, 132)).bg(Color::Rgb(40, 40, 40)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(168, 153, 132)).bg(Color::Rgb(40, 40, 40)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(184, 187, 38)).bg(Color::Rgb(40, 40, 40)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(184, 187, 38)).bg(Color::Rgb(40, 40, 40)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(184, 187, 38)).bg(Color::Rgb(60, 56, 54)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(211, 134, 155)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(211, 134, 155)).bg(Color::Rgb(40, 40, 40)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(211, 134, 155)).bg(Color::Rgb(80, 73, 69)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(29, 32, 33)).underline_color(Color::Reset).dim()",
            "Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(40, 40, 40)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(60, 56, 54)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(60, 56, 54)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(80, 73, 69)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(251, 73, 52)).bg(Color::Rgb(60, 56, 54)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(29, 32, 33)).bg(Color::Rgb(131, 165, 152)).underline_color(Color::Reset).bold()",
        ],
    ),
    (
        CatppuccinMocha,
        [
            "Style::new().fg(Color::Rgb(127, 132, 156)).bg(Color::Rgb(24, 24, 37)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(127, 132, 156)).bg(Color::Rgb(24, 24, 37)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(127, 132, 156)).bg(Color::Rgb(30, 30, 46)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(127, 132, 156)).bg(Color::Rgb(30, 30, 46)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(137, 180, 250)).bg(Color::Rgb(24, 24, 37)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(137, 180, 250)).bg(Color::Rgb(24, 24, 37)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(137, 180, 250)).bg(Color::Rgb(30, 30, 46)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(137, 180, 250)).bg(Color::Rgb(49, 50, 68)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(137, 220, 235)).bg(Color::Rgb(24, 24, 37)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(137, 220, 235)).bg(Color::Rgb(24, 24, 37)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(137, 220, 235)).bg(Color::Rgb(30, 30, 46)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(137, 220, 235)).bg(Color::Rgb(49, 50, 68)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(166, 227, 161)).bg(Color::Rgb(30, 30, 46)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(166, 227, 161)).bg(Color::Rgb(30, 30, 46)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(166, 227, 161)).bg(Color::Rgb(49, 50, 68)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(203, 166, 247)).bg(Color::Rgb(24, 24, 37)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(203, 166, 247)).bg(Color::Rgb(30, 30, 46)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(203, 166, 247)).bg(Color::Rgb(69, 71, 90)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(205, 214, 244)).bg(Color::Rgb(24, 24, 37)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(205, 214, 244)).bg(Color::Rgb(24, 24, 37)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(205, 214, 244)).bg(Color::Rgb(24, 24, 37)).underline_color(Color::Reset).dim()",
            "Style::new().fg(Color::Rgb(205, 214, 244)).bg(Color::Rgb(30, 30, 46)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(205, 214, 244)).bg(Color::Rgb(49, 50, 68)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(205, 214, 244)).bg(Color::Rgb(49, 50, 68)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(205, 214, 244)).bg(Color::Rgb(69, 71, 90)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(24, 24, 37)).bg(Color::Rgb(137, 180, 250)).underline_color(Color::Reset).bold()",
            "Style::new().fg(Color::Rgb(243, 139, 168)).bg(Color::Rgb(49, 50, 68)).underline_color(Color::Reset)",
            "Style::new().fg(Color::Rgb(88, 91, 112)).bg(Color::Rgb(24, 24, 37)).underline_color(Color::Reset)",
        ],
    ),
]
