codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__shell_render_uses_tokyo_night_styles.snap
---
source: tui/src/app_shell_tests.rs
expression: "buffer_style_grid(&render_shell_buffer(&shell, area))"
---
style grid 100x28:
0000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000
0222222222220344400000555555555555555066666666666017777777777771777777777771888888888888817777777770
1111111111111111111111111111111111111111111111111111111111111111111111111111888888888888811111111110
9999999999999999999999999999999999999999999999999910000000000000000000000000000000000000000000000000
9AABBBBBBBBBBBB9999999999999999999999999999999999911CCDDDDDDDD00000000000000000000000000000000000000
9BBBBBBBBBBEEEEEEEEEEEEEEEEEEEEEE9999999999999999911777777777777777700444444007777777777000000000000
9FFFFFFF99999999999999999999999999999999999999999911GGGGGGGGGGGGG77777777000000000000000000000000000
9999999999999999999999999999999999999999999999999911777777777777777700000000000000000000000000000000
9HHHHHHHHH999999999999999999999999999999999999999910000000000000000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999911CCDDDDDD0000000000000000000000000000000000000000
9IIIIIIIIAAAJJJJJJJJJJJ99999999999999999999999999911000000000000000000000000000000000000000000000000
9JJJJJJJJAAAJJJJJJJJJJJJJJJ9999999999999999999999911KKKLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL000000000
9JJJJJJJJAAAJJJJJJJJJJJJJJJJ999999999999999999999911KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK000
9999999999999999999999999999999999999999999999999910000000000000000000000000000000000000000000000000
9MNOOOOONNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNN910000000000000000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999910000000000000000000000000000000000000000000000000
9PNOOOOOOONNNNNNNNPPPPPQQQNNNNNNNNNNNNNNNNNNNNNNN910000000000000000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999910000000000000000000000000000000000000000000000000
9HHHHHHHHH999999999999999999999999999999999999999910000000000000000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999910000000000000000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999910000000000000000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999910000000000000000000000000000000000000000000000000
RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR10000000000000000000000000000000000000000000000000
RRROOOOOOOOOOOOONNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNR10000000000000000000000000000000000000000000000000
RRRNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNR10000000000000000000000000000000000000000000000000
RNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNR10000000000000000000000000000000000000000000000000
RNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNR10000000000000000000000000000000000000000000000000
RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR10000000000000000000000000000000000000000000000000
legend:
0 (1156 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
1 (124 cells): Style::new().fg(Color::Rgb(65, 72, 104)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
2 (11 cells): Style::new().fg(Color::Rgb(22, 22, 30)).bg(Color::Rgb(122, 162, 247)).underline_color(Color::Reset).bold()
3 (1 cells): Style::new().fg(Color::Rgb(187, 154, 247)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).bold()
4 (9 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).bold()
5 (15 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(41, 46, 66)).underline_color(Color::Reset)
6 (11 cells): Style::new().fg(Color::Rgb(187, 154, 247)).bg(Color::Rgb(41, 46, 66)).underline_color(Color::Reset)
7 (82 cells): Style::new().fg(Color::Rgb(86, 95, 137)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
8 (26 cells): Style::new().fg(Color::Rgb(122, 162, 247)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).bold()
9 (708 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset)
A (11 cells): Style::new().fg(Color::Rgb(122, 162, 247)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset)
B (22 cells): Style::new().fg(Color::Rgb(86, 95, 137)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset).bold()
C (4 cells): Style::new().fg(Color::Rgb(122, 162, 247)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
D (14 cells): Style::new().fg(Color::Rgb(86, 95, 137)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).bold()
E (22 cells): Style::new().fg(Color::Rgb(86, 95, 137)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset)
F (7 cells): Style::new().fg(Color::Rgb(125, 207, 255)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset).bold()
G (13 cells): Style::new().fg(Color::Rgb(125, 207, 255)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).bold()
H (18 cells): Style::new().fg(Color::Rgb(187, 154, 247)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset).bold()
I (8 cells): Style::new().fg(Color::Rgb(158, 206, 106)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset).bold()
J (58 cells): Style::new().fg(Color::Rgb(158, 206, 106)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset)
K (48 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).dim()
L (36 cells): Style::new().fg(Color::Rgb(125, 207, 255)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
M (1 cells): Style::new().fg(Color::Rgb(125, 207, 255)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset)
N (249 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset)
O (25 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset).bold()
P (6 cells): Style::new().fg(Color::Rgb(158, 206, 106)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset)
Q (3 cells): Style::new().fg(Color::Rgb(247, 118, 142)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset)
R (112 cells): Style::new().fg(Color::Rgb(122, 162, 247)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset)
