codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__short_command_palette.snap
---
source: tui/src/app_shell_tests.rs
expression: rendered
---
 ◆ BC       gpt-5-codex ▾   default ▾  ● thinking │
──────────────────────────────────────────────────│ Sessions │ Agents │ Workspace │ Settings │ Help
              ╭──────────────────────────────────────────────────────────────────────╮─────────────
 ◆ CONVERSATIO│◆ ACTIONS  Ctrl+P                                                     │
 ▎ CODEX  The │                                                                      │
          surf│  Fork thread                                                         │ns
              │  Import Claude Code setup                                            │
╭─────────────│▌ Compact context  Context compaction action is no...                 │
│◆ MESSAGE  1:│↑↓ / j k navigate   Enter select   Esc close  ↑12/12                  │
│> Summarize t╰──────────────────────────────────────────────────────────────────────╯x-tui
│                                                ││▎completed file changes in app_shell
╰────────────────────────────────────────────────╯│
