codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__short_plugin_management.snap
---
source: tui/src/app_shell_tests.rs
expression: rendered
---
 ◆ BC      gpt-5-codex ▾   default ▾   default ▾  │
──────────────────────────────────────────────────│   Status   │  Agents   │  Sessions   │  Help
              ╭──────────────────────────────────────────────────────────────────────╮━━━──────────
 ◆ CONVERSATIO│◆ PLUGINS                                                             │
 ▎ CODEX  The │12/12 plugin catalog  ↑↓ / j k navigate                               │
          surf│Install / update ↵  Toggle e  Uninstall u  Refresh r                  │ns
              │> available  Plugin 11 (local)                                        │
╭─────────────│                                                                      │
│◆ MESSAGE  1:│Action: press i or Enter to install                                   │
│> Summarize t╰──────────────────────────────────────────────────────────────────────╯
│                                                ││▎id 01900000-0000-7000-8000-000000000001
╰────────────────────────────────────────────────╯│
