codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__steered_message_is_rendered_once.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 80, 16,),)"
---
  Dashboard  ◆ BC             gpt-5-codex ▾   default ▾   default ▾  ◐ thinking
────────────────────────────────────────────────────────────────────────────────

 ◆ CONVERSATION
 ▎ YOU  Keep the implementation focused.





╭──────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  ● RUNNING  1:1                                                     │
│> Type a message, Shift+Enter for newline                                     │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
