codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__streaming_tool_output_renders_latest_lines_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
 ◆ BC       gpt-5-codex ▾   default ▾  ● thinking │ Sessions │ Agents │ Workspace │ Settings │ Help
──────────────────────────────────────────────────│━━━━━━━━━━──────────────────────────────────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
   ▌ output ... 4 earlier output lines            │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
   ▌        line 5                                │▎loading sessions
   ▌        line 6                                │
   ▌        line 7                                │▎◆ TOOLS
                                                  │▎in progress exec just test -p codex-tui
                                                  │▎completed file changes in app_shell
                                                  │
                                                  │▎◆ THREAD
                                                  │▎stage-one
╭────────────────────────────────────────────────╮│▎id 01900000-0000-7000-8000-000000000001
│◆ MESSAGE  1:37                                 ││▎resume, fork, archive, delete in session list
│> Summarize the new shell architecture          ││
│                                                ││▎◆ STATUS
│                                                ││▎thinking
╰────────────────────────────────────────────────╯│
