codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__tool_input_command_left_cursor.snap
---
source: tui/src/app_shell_tests.rs
expression: after
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
          by app-server turns.                  │ │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
 ▎ PLAN  1. Build shell                         │ │▎+ New session  Ctrl+N
         2. Wire transcript                     ┃ │▎loading sessions
         3. Render dashboard                    ┃ │
                                                ┃ │▎◆ THREAD
 ▌ tool exec just test -p codex-tui             ┃ │▎stage-one
                                                ┃ │▎id 01900000-0000-7000-8000-000000000001
 ▌ edited 3 files +128 -24                      ┃ │▎resume, fork, archive, delete in session list
                                                ┃ │
 ▎ CODEX  The new shell owns the fullscreen     ┃ │
          surface.                              ┃ │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ TOOL INPUT                                    ││
│? Tool input: tool-input-1 (1/1)                ││
│  Environment: Which environment should the tool││
│  use?                                          ││
│  1 Production - Use the live service           ││
│  2 Staging - Use the staging service           ││
│  Other (free-form) - Type a custom answer      ││
│  below.                                        ││
│> ▏alpha beta                                   ││
╰────────────────────────────────────────────────╯│
