codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__turn_completion_adds_one_separator_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 100, 20))"
---
                                                  │
 ◆ BC      gpt-5-codex ▾   default ▾   default ▾  │ Settings │ Agents │ Workspace │ Sessions │ Help
──────────────────────────────────────────────────│────────────────────────────────━━━━━━━━━━──────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
 ▎ CODEX  Turn complete.                          │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
 ──────────────────────────────────────────────── │▎loading sessions
                                                  │
                                                  │▎◆ BACKGROUND
                                                  │▎workspace refresh queued
                                                  │
                                                  │▎◆ TOOLS
                                                  │▎in progress exec just test -p codex-tui
                                                  │▎completed file changes in app_shell
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││▎◆ THREAD
│> Summarize the new shell architecture          ││▎stage-one
│                                                ││▎id 01900000-0000-7000-8000-000000000001
│                                                ││▎resume, fork, archive, delete in session list
╰────────────────────────────────────────────────╯│
