codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__turn_submission_and_history_preserve_boundary_whitespace.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 80, 16,))"
---
  Dashboard  ◆ BC   gpt-5-codex ▾   default ▾   default ▾  ◐ thinking · turn 0s
────────────────────────────────────────────────────────────────────────────────

 ◆ CONVERSATION
 ▎ YOU    indented content





╭──────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  ● RUNNING  3:1                                                     │
│>   indented content                                                          │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
